k8s/admin-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: admin-service
  name: admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: admin-service
    spec:
      containers:
        - image: admin-service
          name: admin-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8009
              protocol: TCP
      restartPolicy: Always
