k8s/nlu-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: nlu-service
  name: nlu-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nlu-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: nlu-service
    spec:
      containers:
        - image: nlu-service
          name: nlu-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: nlu-service-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: nlu-service-cm0
          name: nlu-service-cm0
