k8s/user-profile-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: user-profile-service
  name: user-profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-profile-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: user-profile-service
    spec:
      containers:
        - args:
            - uvicorn
            - user_profile_service:app
            - --host
            - 0.0.0.0
            - --port
            - "8002"
          image: user-profile-service
          name: user-profile-service
          ports:
            - containerPort: 8002
              protocol: TCP
      restartPolicy: Always
