k8s/admin-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: admin-service
  name: admin-service
spec:
  ports:
    - name: "8009"
      port: 8009
      targetPort: 8009
  selector:
    io.kompose.service: admin-service
