k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  type: NodePort               # ✅ Add this line
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30082          # Optional fixed port
  selector:
    io.kompose.service: gateway
