k8s/knowledge-ingestion-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: knowledge-ingestion-service
  name: knowledge-ingestion-service
spec:
  ports:
    - name: "8011"
      port: 8011
      targetPort: 8011
  selector:
    io.kompose.service: knowledge-ingestion-service
