k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  ports:
    - name: "8005"
      port: 8005
      targetPort: 8005
  selector:
    io.kompose.service: order-service
